<resources>
    <string name="app_name">Location Reminders</string>
    <string name="welcome_to_location_reminders">Welcome to Location Reminders!</string>
    <string name="a_to_do_list_app_with_location_reminders_that_reminds_you_of_what_to_do_upon_reaching_a_specific_location">A to-do list app with location reminders that reminds you of what to do upon reaching a specific location.</string>
    <string name="login">Login</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="no_reminders">No Reminders</string>
    <string name="your_saved_reminders_will_appear_here_after_you_add_them_via_the_button_with_the_plus_icon">Your saved reminders will appear here after you add them via the button with the plus icon.</string>
    <string name="add_a_new_reminder">Add a new reminder.</string>
    <string name="logout">Logout</string>
    <string name="reminder_saved">Reminder Saved!</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="done">Done</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="locate">Locate</string>
    <string name="log_in_using_an_existing_account_or_create_a_new_one">Log in Using an Existing Account or Create a New One</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="no_location_is_selected">No Location Is Selected</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="my_location">My location</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
</resources>