...
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_normal"
                android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
                android:indeterminate="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_new_reminder_floating_action_button"
                style="@style/Widget.Material3.FloatingActionButton.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/margin_normal"
                android:backgroundTint="?colorSecondary"
...
